fix: fixing some files

--- a/.storybook/pages/Installing.mdx
+++ b/.storybook/pages/Installing.mdx
@@ -50,11 +50,8 @@ import { Meta } from "@storybook/blocks";
   To install emaki-charts at your React project, you can use npm or yarn. Just run in your terminal at application root directory:
 
   ```bash
-  $ npm install emaki-charts
+  $ npm install findme-emaki-charts
   
-  or
-
-  $ yarn add emaki-charts
   ```
 </div>
 
