--- a/.storybook/pages/Introduction.mdx
+++ b/.storybook/pages/Introduction.mdx
@@ -116,7 +116,7 @@ import { Meta } from "@storybook/blocks";
 
 <a
   className="link-item"
-  href="http://localhost:6006/?path=/docs/quickstart-installation--docs"
+  href="http://localhost:6006/?path=/docs/quickstart-how-to-install--documentation"
 >
   <span>
     <strong>How to Install</strong>
@@ -133,7 +133,7 @@ import { Meta } from "@storybook/blocks";
 
      <a
     className="link-item"
-    href=""
+    href="https://gitlab.com/findmebr/findme-emaki-charts"
     target="_blank"
 
 >
@@ -152,7 +152,7 @@ import { Meta } from "@storybook/blocks";
 <div className="link-list">
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-simple-line--docs"
+    href="http://localhost:6006/?path=/docs/api-lines-simple-line--documentation"
   >
     <span>
       <strong>Simple Line </strong>A simple and basic line chart.
@@ -160,7 +160,7 @@ import { Meta } from "@storybook/blocks";
   </a>
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-simple-bar--docs"
+    href="http://localhost:6006/?path=/docs/api-bars-simple-bar--documentation"
   >
     <span>
       <strong>Simple Bar</strong>A simple and basic bar chart.
@@ -168,7 +168,7 @@ import { Meta } from "@storybook/blocks";
   </a>
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-stacked-bar--docs"
+    href="http://localhost:6006/?path=/docs/api-bars-stacked-bar--documentation"
   >
     <span>
       <strong>Stacked Bar</strong>A chart with multiple bars stacked on top of
@@ -177,7 +177,7 @@ import { Meta } from "@storybook/blocks";
   </a>
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-biaxial-bar--docs"
+    href="http://localhost:6006/?path=/docs/api-bars-biaxial-bar--documentation"
   >
     <span>
       <strong>Biaxial Bar</strong>A chart with multiple bars and multiple axes.
@@ -185,7 +185,7 @@ import { Meta } from "@storybook/blocks";
   </a>
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-positive-and-negative-bar--docs"
+    href="http://localhost:6006/?path=/docs/api-bars-positive-and-negative-bar--documentation"
   >
     <span>
       <strong>Positive Negative Bar</strong>A chart with multiple bars with
@@ -194,7 +194,7 @@ import { Meta } from "@storybook/blocks";
   </a>
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-stacked-positive-and-negative-bar--docs"
+    href="http://localhost:6006/?path=/docs/api-bars-stacked-positive-and-negative-bar--documentation"
   >
     <span>
       <strong>Positive Negative Stacked Bar</strong>A chart with multiple bars
@@ -203,7 +203,7 @@ import { Meta } from "@storybook/blocks";
   </a>
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-brush-bar--docs"
+    href="http://localhost:6006/?path=/docs/api-bars-brush-bar--documentation"
   >
     <span>
       <strong>Brush Bar</strong>A chart with multiple bars and multiple axes,
@@ -212,7 +212,7 @@ import { Meta } from "@storybook/blocks";
   </a>
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-composed-line-bar-area--docs"
+    href="http://localhost:6006/?path=/docs/api-composed-line-bar-area--documentation"
   >
     <span>
       <strong>Line Bar Area</strong>A chart with multiple bars, lines and areas
@@ -221,7 +221,7 @@ import { Meta } from "@storybook/blocks";
   </a>
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-composed-line-bar-area-horizontal--docs"
+    href="http://localhost:6006/?path=/docs/api-composed-line-bar-area-horizontal--documentation"
   >
     <span>
       <strong>Line Bar Area Horizontal</strong>A chart with multiple bars, lines
@@ -230,7 +230,7 @@ import { Meta } from "@storybook/blocks";
   </a>
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-pies-simple-pie--docs"
+    href="http://localhost:6006/?path=/docs/api-pies-simple-pie--documentation"
   >
     <span>
       <strong>Simple Pie</strong>A simple and basic pie chart.
@@ -238,7 +238,7 @@ import { Meta } from "@storybook/blocks";
   </a>
   <a
     className="link-item"
-    href="http://localhost:6006/?path=/docs/api-pies-active-label-pie--docs"
+    href="http://localhost:6006/?path=/docs/api-pies-active-label-pie--documentation"
   >
     <span>
       <strong>Active Label Pie</strong>A pie chart with active labels, which are
