--- a/.storybook/pages/Installing.mdx
+++ b/.storybook/pages/Installing.mdx
@@ -44,19 +44,19 @@ import { Meta } from "@storybook/blocks";
 
 # How to install
 
-<div className="subheading">Installing emaki-charts</div>
+<div className="subheading">Installing cowlde-charts</div>
 
 <div className="container">
-  To install emaki-charts at your React project, you can use npm or yarn. Just run in your terminal at application root directory:
+  To install cowlde-charts at your React project, you can use npm or yarn. Just run in your terminal at application root directory:
 
   ```bash
-  $ npm install findme-emaki-charts
+  $ npm install cowlde-charts
   
   ```
 </div>
 
 <div className="tip-wrapper">
   <span>
-    <span className="tip">Copyright © 2023 FindMe. All rights reserved.</span>
+    <span className="tip">Copyright © 2023 Cowlde Tech. All rights reserved.</span>
   </span>
 </div>
