--- a/.storybook/pages/Introduction.mdx
+++ b/.storybook/pages/Introduction.mdx
@@ -108,147 +108,30 @@ import { Meta } from "@storybook/blocks";
   `}
 </style>
 
-# Welcome to emaki-charts
+# Welcome to cowlde-charts
 
-<div className="subheading">Quickstart</div>
+<div className="subheading">Useful Links</div>
 
 <div className="link-list">
 
-<a
-  className="link-item"
-  href="http://localhost:6006/?path=/docs/quickstart-how-to-install--documentation"
->
+<a className="link-item" href="" target="_blank">
   <span>
-    <strong>How to Install</strong>
-    Learn how to install emaki-charts in your project.
+    <strong>NPM Package</strong>
+    Visit cowlde-charts package in NPM.
   </span>
 </a>
 
 <a className="link-item" href="" target="_blank">
   <span>
-    <strong>NPM Package</strong>
-    Visit emaki-charts package in NPM.
+    <strong>Gitlab Repository</strong>
+    Check out the source code in Gitlab.
   </span>
 </a>
-
-     <a
-    className="link-item"
-    href="https://gitlab.com/findmebr/findme-emaki-charts"
-    target="_blank"
-
->
-
-    <span>
-      <strong>Gitlab Repository</strong>
-      Check out the source code in Gitlab.
-    </span>
-
-  </a>
   
-</div>
-
-<div className="subheading">API Examples</div>
-
-<div className="link-list">
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-lines-simple-line--documentation"
-  >
-    <span>
-      <strong>Simple Line </strong>A simple and basic line chart.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-simple-bar--documentation"
-  >
-    <span>
-      <strong>Simple Bar</strong>A simple and basic bar chart.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-stacked-bar--documentation"
-  >
-    <span>
-      <strong>Stacked Bar</strong>A chart with multiple bars stacked on top of
-      each other.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-biaxial-bar--documentation"
-  >
-    <span>
-      <strong>Biaxial Bar</strong>A chart with multiple bars and multiple axes.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-positive-and-negative-bar--documentation"
-  >
-    <span>
-      <strong>Positive Negative Bar</strong>A chart with multiple bars with
-      positive and negative values.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-stacked-positive-and-negative-bar--documentation"
-  >
-    <span>
-      <strong>Positive Negative Stacked Bar</strong>A chart with multiple bars
-      with positive and negative values, stacked on top of each other.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-bars-brush-bar--documentation"
-  >
-    <span>
-      <strong>Brush Bar</strong>A chart with multiple bars and multiple axes,
-      with a brush to select a range of data.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-composed-line-bar-area--documentation"
-  >
-    <span>
-      <strong>Line Bar Area</strong>A chart with multiple bars, lines and areas
-      on the same chart.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-composed-line-bar-area-horizontal--documentation"
-  >
-    <span>
-      <strong>Line Bar Area Horizontal</strong>A chart with multiple bars, lines
-      and areas on the same chart, with horizontal orientation.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-pies-simple-pie--documentation"
-  >
-    <span>
-      <strong>Simple Pie</strong>A simple and basic pie chart.
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="http://localhost:6006/?path=/docs/api-pies-active-label-pie--documentation"
-  >
-    <span>
-      <strong>Active Label Pie</strong>A pie chart with active labels, which are
-      labels that are displayed when the mouse is over the slice.
-    </span>
-  </a>
 </div>
 
 <div className="tip-wrapper">
   <span>
-    <span className="tip">Copyright © 2023 FindMe. All rights reserved.</span>
+    <span className="tip">Copyright © 2023 Cowlde Tech. All rights reserved.</span>
   </span>
 </div>
